# aoc

./: Cargo.toml
src/: aoc2020.rs  aoc2021.rs  aoc2022.rs  aoc2023.rs  aoc2024.rs  aoc2025.rs  main.rs
src/aoc2020/: day01.rs  day02.rs
src/aoc2021/day01/: mod.rs
src/aoc2021/day02/: mod.rs
src/aoc2021/day03/: mod.rs
src/aoc2021/day04/: mod.rs
src/aoc2021/day05/: mod.rs
src/aoc2022/day01/: mod.rs
src/aoc2022/day02/: mod.rs
src/aoc2022/day03/: mod.rs
src/aoc2022/day04/: mod.rs
src/aoc2022/day05/: mod.rs
src/aoc2022/day06/: mod.rs
src/aoc2022/day07/: mod.rs
src/aoc2022/day08/: mod.rs
src/aoc2022/day09/: mod.rs
src/aoc2022/day10/: mod.rs
src/aoc2022/day11/: mod.rs
src/aoc2022/day12/: input.txt  mod.rs
src/aoc2022/day13/: mod.rs
src/aoc2022/day14/: mod.rs
src/aoc2022/day15/: mod.rs
src/aoc2023/day01/: mod.rs
src/aoc2023/day02/: mod.rs
src/aoc2023/day03/: mod.rs
src/aoc2023/day04/: mod.rs
src/aoc2023/day05/: mod.rs
src/aoc2023/day06/: mod.rs
src/aoc2023/day07/: mod.rs
src/aoc2023/day08/: mod.rs
src/aoc2024/day01/: mod.rs
src/aoc2024/day02/: mod.rs
src/aoc2025/day01/: mod.rs
src/aoc2025/day02/: mod.rs
src/aoc2025/day03/: mod.rs
src/day01/: mod.rs
src/day02/: mod.rs
