[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
array_tool = "1.0.3" # day 03
itertools = "0.10.5"  # day 03
petgraph = "0.6.2" # day 12
nom = "6" # day 13
atoi = "2.0.0" #day 13
